<resources>
    <string name="app_name">EZchores</string>
    <string name="app_logo">App logo</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign up</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="welcomeBack">Welcome Back!</string>
    <string name="email">Email:</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="welcome1">Welcome!</string>
    <string name="back">BACK</string>
    <string name="full_name">Full name:</string>
    <string name="enter_email">Enter Email:</string>
    <string name="password1">Password:</string>
    <string name="sign_up1">SIGN UP</string>
    <string name="server_client_id">849835775511-7prdp8jouv4orjv6d0e2oqpum8mgesu7.apps.googleusercontent.com</string>
    <string name="my_groups">My Groups:</string>
    <string name="create_new_group">create new group</string>
    <string name="personal_information">Personal information</string>
    <string name="user_name">user_name</string>
    <string name="total_points_earned">Total points earned:</string>
    <string name="_0">0</string>
    <string name="create_group">Create Group</string>
    <string name="group_name">Group Name:</string>
    <string name="invite_members">Invite Members:</string>
    <string name="goals">Goals:</string>
    <string name="uncompleted_tasks">Uncompleted Tasks:</string>
    <string name="task_1_content">Task 1 content</string>
    <string name="coins">COINS</string>
    <string name="back_to_groups">Back to groups</string>
    <string name="add_item">Add item</string>
    <string name="select">Select User</string>
    <string name="add_a_goal">add a goal</string>
    <string name="add_new_task">Add New Task</string>
    <string name="name">Name</string>
    <string-array name="task_assignee">
        <item>Assignee</item>
        <item>mem1</item>
        <item>mem2</item>
        <item>mem3</item>
    </string-array>
</resources>