<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1faee"
    tools:context=".LogIn_Activity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/back_home"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="300dp"
        android:layout_height="wrap_content"
        android:text="BACK"
        android:background="@drawable/round_button"
        android:textColor="#f1faee"
        app:layout_constraintBottom_toBottomOf="@id/welcome_back"/>


    <TextView
        android:id="@+id/welcome_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/welcomeBack"
        android:textColor="#1d3557"
        android:textAlignment="center"
        android:textStyle="bold" />

    <EditText
            android:id="@+id/Email_field"
        android:layout_marginTop="150dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="50dp"
            android:textColorHint="#1d3557"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/Password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="#1D3557"
            tools:ignore="Autofill" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/commit_login"
            android:layout_marginLeft="150dp"
            android:background="@drawable/valid_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/log_in"
            android:textColor="#f1faee"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_marginLeft="300dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/forgot_password"
            android:textColor="#e63946"/>

</LinearLayout>