<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".My_Groups_Activity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/my_groups"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/my_groups"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/create_new_group"
            android:src="@drawable/add_icon"
            app:backgroundTint="@color/white"
            app:layout_constraintStart_toEndOf="@id/my_groups"
            app:layout_constraintTop_toTopOf="parent"
            app:maxImageSize="65dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/personal_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/personal_information"
            android:scaleType="center"
            android:src="@drawable/personal_info"
            app:backgroundTint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:maxImageSize="45dp" />

        <TextView
            android:id="@+id/group_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="Group 1 name"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/my_groups"
            android:contextClickable="true"
            android:gravity="center"/>

        <TextView
            android:id="@+id/group_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Group 2 name"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/group_1"
            android:contextClickable="true"
            android:gravity="center"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>