<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:textAlignment="center"
    tools:context=".Group_User_Activity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/group_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/group_name"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/shopping_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="19dp"
            android:contentDescription="@string/_0"
            android:src="@drawable/shopping_cart"
            app:backgroundTint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:maxImageSize="45dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/group_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="19dp"
            android:contentDescription="@string/_0"
            android:src="@drawable/person"
            app:backgroundTint="@color/white"
            app:layout_constraintStart_toEndOf="@id/group_name"
            app:layout_constraintTop_toTopOf="parent"
            app:maxImageSize="45dp" />

        <TextView
            android:id="@+id/goals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/goals"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shopping_list" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/new_goal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="-10dp"
            android:contentDescription="@string/_0"
            android:src="@drawable/add_icon"
            app:backgroundTint="@color/white"
            app:layout_constraintTop_toTopOf="@id/goals"
            app:layout_constraintEnd_toEndOf="parent"
            app:maxImageSize="45dp" />

        <LinearLayout
            android:id="@+id/goals_lay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:minHeight="120dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/goals"
            >

            <ListView
                android:id="@+id/goals_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/tasks_lay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:minHeight="120dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/tasks_view"
            >

            <ListView
                android:id="@+id/tasks_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tasks_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/uncompleted_tasks"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/goals_lay" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/new_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="-10dp"
            android:contentDescription="@string/_0"
            android:src="@drawable/add_icon"
            app:backgroundTint="@color/white"
            app:layout_constraintStart_toEndOf="@id/tasks_view"
            app:layout_constraintTop_toTopOf="@id/tasks_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:maxImageSize="45dp" />




        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/back_to_groups"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:background="@color/black"
            android:text="@string/back_to_groups"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tasks_lay" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>