<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blob_scene2"
    android:orientation="vertical"
    tools:context=".Personal_Info_Activity">


        <TextView
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:background="@drawable/titles_bar"
            android:padding="20dp"
            android:minHeight="60dp"
            android:text="@string/user_name"
            android:textColor="@color/bg"
            android:textSize="30sp"
            />




    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:strokeWidth="5dp"
        app:strokeColor="@color/button"
        android:layout_centerHorizontal="true"
        app:cardCornerRadius="90dp"
        android:layout_gravity="center"
        android:elevation="10dp">

        <ImageView
            android:id="@+id/user_photo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/group_photo"
            android:background="@color/bg"
            android:scaleType="centerCrop"
            />

    </com.google.android.material.card.MaterialCardView>


    <TextView
        android:id="@+id/new_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/email"
        android:textColorHint="@color/button"
        tools:ignore="Autofill"
        android:textStyle="bold"
        android:textSize="25sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/total_points_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Available points: (press to use points)"
            android:textSize="20sp"
            android:textStyle="bold"
            android:minHeight="48dp"
            tools:layout_editor_absoluteY="238dp" />


        <EditText
            android:id="@+id/total_points_num"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="points"
            android:inputType="number"
            android:text="@string/_0"
            android:textSize="150sp"
            android:textStyle="bold"
            />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/log_out"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="Log Out"
            android:background="@drawable/invalid_button"
            android:textColor="@color/bg"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>



</LinearLayout>